# Online_store

./: pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: catalog.json  product.json
catalog/management/commands/: add_data.py
catalog/migrations/: 0001_initial.py  0002_product.py  0003_alter_category_options_alter_category_description_and_more.py  0004_alter_product_options.py  0005_alter_product_price.py  0005_product_manufactured_at.py  0006_productversion.py  0007_alter_productversion_version_number.py
catalog/templates/catalog/: base.html  contacts.html  goods.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_main.html
catalog/templatetags/: media_path.py
config/: settings.py
